--- a/CODE/MyFirstMayaPlugin/MyFirstMayaPlugin/MyFirstMayaPlugin.vcxproj.filters
+++ b/CODE/MyFirstMayaPlugin/MyFirstMayaPlugin/MyFirstMayaPlugin.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="maya_includes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PluginHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
